--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   neo4j:
-    image: neo4j:4.2
+    image: neo4j:latest
     container_name: neo4j
     environment:
       NEO4J_AUTH: 'neo4j/password'
